--- a/resources/language/Norwegian/strings.po
+++ b/resources/language/Norwegian/strings.po
@@ -66,7 +66,7 @@ msgstr "Avansert"
 
 msgctxt "#32103"
 msgid "Use local files"
-msgstr "-"
+msgstr "Bruk lokale filer"
 
 msgctxt "#32121"
 msgid "Fanart"
